fixed wrapping on subscriptions page

--- a/Have I been here before/Custom_Stylesheet.css
+++ b/Have I been here before/Custom_Stylesheet.css
@@ -374,7 +374,6 @@
     padding: 10px;
     height: 30vh;
     align-items: start;
-    flex-wrap: wrap;
 
 }
 
